examples/test/testpolicy12958.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12958
  namespace: namespace256
spec:
  podSelector:
    matchLabels:
      key44: value46
      key8: value9
      key34: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value25
      podSelector:
        matchLabels:
          key4: value2
          key13: value32
